<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registro_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        tools:context=".ui.activities.LoginActivity">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/logo_de_registro"
            android:src="@drawable/logo_registro" />

        <EditText
            android:id="@+id/edt_nombre_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/nombre"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edt_email_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"/>

        <EditText
            android:id="@+id/edt_password_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:imeOptions="actionDone"/>

        <Button
            android:id="@+id/btn_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:layout_marginTop="20dp"
            />


        <Button
        android:id="@+id/btn_volver_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volver_a_login"
        android:layout_marginTop="20dp"

        />

    </LinearLayout>

</ScrollView>