<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/pref_general">

        <SwitchPreference
            android:key="pref_dark_mode"
            android:title="@string/pref_modo_oscuro"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_idioma">

        <ListPreference
            android:key="pref_language"
            android:title="Idioma"
            android:entries="@array/pref_language_entries"
            android:entryValues="@array/pref_language_values"
            android:defaultValue="es"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

</PreferenceScreen>
