<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        tools:context=".ui.activities.LoginActivity">

        <ImageView
            android:id="@+id/img_login"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo_login"
            android:contentDescription="@string/logo" />

        <EditText
            android:id="@+id/edt_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            style="@style/textonegritaTamañoMedio"
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp"
            android:imeOptions="actionNext"/>

        <EditText
            android:id="@+id/edt_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena"
            style="@style/textonegritaTamañoMedio"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:imeOptions="actionDone"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:strokeWidth="1dp"
            app:strokeColor="@color/black"
            android:text="@string/iniciar_sesion"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/txt_register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            style="@style/textonegritaTamañoMedio2"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>

</ScrollView>
