<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="top">



    <!-- TARJETA / CAJA -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginBottom="32dp">

        <TextView
            android:id="@+id/nombre_desarrollador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_desarrollador"
            android:textSize="16sp"
            android:paddingBottom="12dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:id="@+id/version_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- BOTÓN -->
    <Button
        android:id="@+id/btnCerrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cerrar" />

</LinearLayout>
